--- a/LeagueSharp.Loader.csproj
+++ b/LeagueSharp.Loader.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Class\Win32Imports.cs" />
     <Compile Include="Data\Config.cs" />
     <Compile Include="Class\LeagueSharpAssembly.cs" />
+    <Compile Include="Data\Crypto\XOR.cs" />
     <Compile Include="Data\Directories.cs" />
     <Compile Include="Data\Log.cs" />
     <Compile Include="Class\GitUpdater.cs" />
